--- a/style.css
+++ b/style.css
@@ -7,6 +7,31 @@ body {
     margin: 0;
 }
 
+.chessboard-container {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1fr auto;
+}
+
+.coordinates {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.coordinates.vertical {
+    flex-direction: column;
+}
+
+.coordinates.horizontal {
+    flex-direction: row;
+}
+
+.coordinates div {
+    font-size: 24px; /* Adjust as needed */
+    margin: 5px;
+}
+
 .chessboard {
     display: grid;
     grid-template-columns: repeat(8, 100px);
